# Kalbi

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  kalshi_client.py  main.py  module_1_fundamental_forecaster.py  module_2_quantitative_engine.py  module_3_strategy_handler.py  pyproject.toml  requirements.txt  train_model.py  utils.py
.github/workflows/: backtest-nightly.yml  ci.yml  deploy.yml
docs/: AGENT_PROMPTS.md  ARCHITECTURE.md  RUNBOOK.md
scripts/: github_sync.py  seed_historical.py  setup_db.py
src/: config.py  main.py
src/agents/: __init__.py  executor.py  fundamentals_analyst.py  kalshi_specialist.py  news_analyst.py  quant_analyst.py  risk_manager.py
src/backtesting/: __init__.py  data_loader.py  engine.py  metrics.py
src/crews/: __init__.py  equities_crew.py  kalshi_crew.py  meta_crew.py
src/dashboard/: streamlit_app.py
src/dashboard/grafana_provisioning/dashboards/: dashboard.yml  kalbi2.json
src/dashboard/grafana_provisioning/datasources/: datasource.yml
src/data/: cache.py  ingestion.py  models.py
src/notifications/: __init__.py  discord_webhook.py  service.py  telegram_bot.py
src/risk/: circuit_breaker.py  portfolio_monitor.py  position_sizer.py
src/strategies/: ensemble.py  kalshi_event_arb.py  mean_reversion.py  momentum.py
src/tools/: __init__.py  alpaca_api.py  kalshi_api.py  market_data.py  news_scraper.py  sec_fetcher.py  sentiment_analyzer.py  technical_indicators.py
tests/: conftest.py  test_backtesting.py  test_config.py  test_models.py  test_risk.py  test_strategies.py
